# FakeNewsDetector

./: .gitignore  FakeNewsDetector.sln
Client/: App.axaml  App.axaml.cs  Client.csproj  Program.cs  ViewLocator.cs
Client/Constants/: AppConstants.cs  NotificationSeverity.cs
Client/Converters/: EqualityConverters.cs
Client/DependencyInjection/: DependencyContainer.cs
Client/Helpers/: EventAggregator.cs  ExceptionHandler.cs  LogContext.cs  LoggerExtensions.cs
Client/Models/: AnalysisResult.cs  AnalysisResultWrapper.cs  ApiSettings.cs  AppConfig.cs  ConfigChangedEventArgs.cs  ConfigLevel.cs  ConfigSection.cs  DefaultConfigs.cs  Enums.cs  NewsItem.cs  UiSettings.cs  WindowState.cs
Client/Services/: ConfigService.cs  ConfigStorageService.cs  IConfigService.cs  MockAnalysisService.cs  MockNewsService.cs  NavigationService.cs  SerilogLoggerService.cs  SettingsService.cs  ThemeService.cs
Client/Styles/: AnimationStyles.axaml  ButtonStyles.axaml  CardStyles.axaml  Colors.axaml  TextStyles.axaml
Client/ViewModels/: DetectionViewModel.cs  HistoryViewModel.cs  HomeViewModel.cs  MainWindowViewModel.cs  SettingsViewModel.cs  (+3 more)
ML/: main.py  pyproject.toml
ML/config/: config.yaml
ML/src/: __init__.py
ML/src/data/: __init__.py  data_loader.py  preprocessor.py
ML/src/evaluation/: __init__.py  metrics.py
ML/src/features/: __init__.py  vectorizers.py
ML/src/models/: __init__.py  logistic_regression.py  naive_bayes.py  random_forest.py  svm.py
ML/src/pipeline/: __init__.py  model_trainer.py  pipeline_builder.py
ML/src/utils/: config_loader.py  logger.py
(+37 files in other folders)
